# pg_tpcds

./: .gitignore  CMakeLists.txt  README.MD
src/: pg_tpcds--1.0.sql  pg_tpcds.cpp  pre_prepare.sql
src/tpcds/: distribution.txt  distribution_original.txt  tpcds_dsdgen.cpp  tpcds_wrapper.cpp
src/tpcds/dsdgen/: w_call_center.cpp  w_customer_address.cpp  w_store.cpp  w_warehouse.cpp  w_web_site.cpp
src/tpcds/include/: tpcds_loader.h  tpcds_wrapper.hpp
src/tpcds/schema/: call_center.sql  catalog_page.sql  catalog_returns.sql  catalog_sales.sql  customer.sql  customer_address.sql  customer_demographics.sql  date_dim.sql  household_demographics.sql  income_band.sql  inventory.sql  item.sql  promotion.sql  reason.sql  ship_mode.sql  store.sql  store_returns.sql  store_sales.sql  time_dim.sql  warehouse.sql  web_page.sql  web_returns.sql  web_sales.sql  web_site.sql
